# devops_support

./: .env copy  .gitignore  README.md  pyproject.toml  sample_datadog_logs.json  splunk_summary-NICE.md
src/devops_support/: main.py
src/devops_support/agents/: argocd_agent.py  datadog_agent.py  plan_agent.py  splunk_agent.py
src/devops_support/crews/: crew.py
src/devops_support/data/: datadog_api.py  splunk_api.py
src/devops_support/knowledge/: ingest.py  query.py  vector_store.py
src/devops_support/orchestrator/: orchestrator.py
