[project]
name = "devops_support"
version = "0.1.0"
description = "devops_support using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"

dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",  # This also brings in the appropriate chromadb
    "beautifulsoup4>=4.13.3,<5.0.0",
    "llama-index>=0.12.28",
    "llama-index-vector-stores-chroma>=0.4.1",
    "llama-index-readers-web>=0.3.9",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-embeddings-ollama>=0.6.0",
    "weave>=0.51.42"
]

[project.scripts]
devops_support = "devops_support.main:run"
run_crew = "devops_support.main:run"
train = "devops_support.main:train"
replay = "devops_support.main:replay"
test = "devops_support.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
